2008-07-01  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2008-06-30  Matthias Clasen  <mclasen@redhat.com>

	Backport from trunk:

	* glib/pcre/pcre_compile.c: Apply fix for CVE-2008-2371 to
	fix a heap-based buffer overflow.

2008-06-30  Matthias Clasen  <mclasen@redhat.com>

	* glib/pcre/*: Update to PCRE 7.7

2008-06-30  Matthias Clasen  <mclasen@redhat.com>

	Backport from trunk:

	Bug 538119 – glib's mainloop leaks a pipe to sub-processes

	* glib/gmain.c (g_main_context_init_pipe): Don't leak the
	pipes to child processes. Patch by Thiago Macieira.

2008-06-30  Matthias Clasen  <mclasen@redhat.com>

	Backport from trunk:

	Bug 502511 – g_assert_cmphex prints invalid message

	* glib/gtestutils.c (g_assertion_message_cmpnum): Actually print
	hex numbers in hex.
	Pointed out by Tor Lillqvist

2008-06-30  Matthias Clasen  <mclasen@redhat.com>

	Backport from trunk:

	Bug 314453 – Nautilus crashes in Solaris when browsing the attached
	file

	* glib/gunicollate.c (g_utf8_collate_key): Handle strfxrm returning
	-1 a little better. Problem pointed out by Takao Fujiwara

2008-06-30  Matthias Clasen  <mclasen@redhat.com>

	Backport from trunk:

	Bug 529321 – make check fails in glib/pcre

	* glib/pcre/Makefile.am: include Makefile.decl to fix 'make check'.
	Patch by Hiroyuki Ikezoe

2008-06-30  Matthias Clasen  <mclasen@redhat.com>

	Backport from trunk:

	Bug 536158 – also bump GHashTable version when a node is removed via
	g_hash_table_iter_remove()/g_hash_table_iter_steal()

	* glib/ghash.c (iter_remove_or_steal): Bump the hash table
	version. Patch by Jean-Yves Lefort

2008-06-30  Matthias Clasen  <mclasen@redhat.com>

	Backport from trunk:

	Bug 519137 – g_slice_dup macro needs cast for 64-bit platform

	* glib/gslice.h (g_slice_copy): Apply type casts needed
	for proper compilation on 64-bit platforms.

2008-06-20  Sebastian Dröge  <slomo@circular-chaos.org>

	Bug 316221 - G_LOCK warns about breaking strict-aliasing rules

	* configure.in: